# Kauth-experiment

./: CMakeLists.txt  LICENSE  README.md  external.cpp  external.h  helper.cpp  main.cpp  org.kde.kauthexp.external.actions
